fix: scrollbar added to chat window

--- a/src/main/webapp/app/entities/chat/list/chat.component.css
+++ b/src/main/webapp/app/entities/chat/list/chat.component.css
@@ -24,7 +24,7 @@
   width: 70%;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 520px;
 }
 
 .chat-window-container {
